# Jupydex

./: .gitignore  README.md  pyproject.toml
src/jupydex/: __init__.py  cli.py  client.py  config.py  mirror.py  terminal.py
tests/: test_cli.py  test_client.py  test_config.py  test_config_store.py  test_mirror.py  test_shell.py  test_terminal.py
